--- a/rain/index.html
+++ b/rain/index.html
@@ -12,7 +12,7 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-<div class="page page-1-1 pt-page-moveFromLeftFade hide">
+<div class="page page-1-1 pt-page-moveFromLeftFade">
     <div class="wap">
         <img src="images/rain-2.png" class="img3 pt-page-moveFromTop"/>
         <img src="images/2015.png" class="img1"/>
@@ -37,7 +37,7 @@
         <img src="images/page-3-1.png" class="img5 pt-page-moveFromLeftFade"/>
     </div>
 </div>
-<div class="page page-4-1 ">
+<div class="page page-4-1 hide">
     <div class="wap">
         <img src="images/page-4-1.png" class="img1"/>
         <img src="images/page-4-2.png" class="img2"/>
